update cloud-service